# xla-rs

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  audit.toml  cobertura.xml  coverage.txt  coverage_v2.txt  local_playground.py  tarpaulin-report.html  test_link  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_full.txt  test_output_gemma.txt  typos.toml
.github/workflows/: audit.yml  rust.yml
benches/: attention_benchmark.rs  matmul_benchmark.rs
book/: book.toml  custom-playground.js  local_playground.py  mermaid-init.js  test_link.rs  typos.toml
book/book/: 404.html  chapter_02_tensors.html  chapter_03_autograd.html  chapter_04_nn.html  chapter_05_attention.html  chapter_06_gemma.html  chapter_07_inference_optimizations.html  chapter_08_distributed_inference.html  chapter_09_training.html  chapter_10_serving.html  chapter_11_ssm.html  chapter_12_diffusion.html  chapter_13_collectives.html  chapter_14_rl.html  chapter_15_quantization.html  index.html  print.html  searcher-c2a407aa.js  searchindex-3ffea832.js  toc-83977558.js  toc.html
book/src/: SUMMARY.md  chapter_01_introduction.md  chapter_02_tensors.md  chapter_03_autograd.md  chapter_04_nn.md  chapter_05_attention.md  chapter_06_gemma.md  chapter_07_computer_vision.md  chapter_07_gpt2.md  chapter_07_inference_optimizations.md  chapter_08_collectives.md  chapter_08_distributed_inference.md  chapter_08_optimization.md  chapter_09_tensor_parallelism.md  chapter_09_training.md  chapter_10_pipeline_parallelism.md  chapter_10_serving.md  chapter_11_data_parallelism.md  chapter_11_ssm.md  chapter_11b_advanced_parallelism.md  chapter_12_diffusion.md  chapter_13_collectives.md  chapter_13_serving.md  chapter_14_rl.md  chapter_14_ssm.md  (+1 more)
core/: Cargo.toml
core/benches/: attention_benchmark.rs  matmul_benchmark.rs  transpose_benchmark.rs
core/src/: checkpoint.rs  lib.rs  loss.rs
core/src/autograd/: engine.rs  functional.rs  mod.rs  ops.rs
core/src/data/: loader.rs  mod.rs  sampler.rs
core/src/distributed/: backend.rs  comm.rs  cpu_backend.rs  fsdp.rs  linear.rs  mod.rs  pipeline.rs
core/src/kernels/: attention.rs
core/src/models/: mod.rs  resnet.rs  traits.rs  vit.rs
core/src/models/gemma/: mod.rs  tokenizer.rs
core/src/models/gpt2/: mod.rs
core/src/nn/: activation.rs  conv.rs  embedding.rs  linear.rs  lora.rs  mod.rs  norm.rs  pool.rs
core/src/nn/transformer/: attention.rs  attention_optimized.rs  mod.rs  moe.rs  rope.rs
core/src/optim/: adamw.rs  mod.rs  scheduler.rs  sgd.rs
core/src/tensor/: const_ops.rs  device.rs  mod.rs  ops.rs  storage.rs
core/tests/: chapter_01_setup.rs  chapter_04_nn.rs  chapter_05_attention.rs  chapter_06_gemma.rs  chapter_07_gpt2.rs  chapter_11b_advanced_parallelism.rs  checkpoint_test.rs  distributed_cpu_test.rs  distributed_xla_test.rs  vision_test.rs
examples/: Cargo.toml  README.md
kernels/: Cargo.toml
src/: lib.rs  moe.rs
src/gemma/: mod.rs  (+2 more)
tests/: autograd_tests.rs  book_tests.rs  chapter_02_tensors.rs  chapter_03_autograd.rs  chapter_05_attention.rs  chapter_06_gemma.rs  matmul_verification.rs  nn_integration_test.rs
(+33 files in other folders)
