[package]
name = "xla_rs"
version = "0.1.0-alpha.1"
edition = "2024"
description = "A pure Rust implementation of LLM building blocks and tensors."
license = "MIT"
repository = "https://github.com/mindfulqumachine/xla-rs"
documentation = "https://mindfulqumachine.github.io/xla-rs/book/"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.17"
